{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 970,
  "lineage": "c392b242-9b31-6bd2-35cd-4832811c341e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "first_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0bd3c2e379f7f09c9",
            "arn": "arn:aws:ec2:us-east-1:619608907298:instance/i-028f7417206cac4df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "network-interface.subnet-id",
                "values": [
                  "subnet-0e50aa48b96313b98"
                ]
              },
              {
                "name": "tag:eks:cluster-name",
                "values": [
                  "eks_cluster"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "eks-3ac1d0ef-57a1-6d2e-7954-d43d627bc76e",
            "id": "i-028f7417206cac4df",
            "instance_state": "running",
            "instance_type": "t2.large",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-08e45ca725db37b14",
            "private_dns": "ip-172-22-10-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.10.225",
            "public_dns": "ec2-44-192-116-122.compute-1.amazonaws.com",
            "public_ip": "44.192.116.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be8ed1f8edffe8d3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "172.22.10.138",
              "172.22.10.166",
              "172.22.10.176",
              "172.22.10.190",
              "172.22.10.191",
              "172.22.10.38",
              "172.22.10.49",
              "172.22.10.53",
              "172.22.10.66",
              "172.22.10.86",
              "172.22.10.92"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e50aa48b96313b98",
            "tags": {
              "eks:cluster-name": "eks_cluster",
              "eks:nodegroup-name": "workernodes",
              "k8s.io/cluster-autoscaler/eks_cluster": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/eks_cluster": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0730b33abb9a37e30"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "second_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0bd3c2e379f7f09c9",
            "arn": "arn:aws:ec2:us-east-1:619608907298:instance/i-07f3d8b69d5725a7e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "network-interface.subnet-id",
                "values": [
                  "subnet-018acac454239a095"
                ]
              },
              {
                "name": "tag:eks:cluster-name",
                "values": [
                  "eks_cluster"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "eks-3ac1d0ef-57a1-6d2e-7954-d43d627bc76e",
            "id": "i-07f3d8b69d5725a7e",
            "instance_state": "running",
            "instance_type": "t2.large",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-08f3723345e770cd8",
            "private_dns": "ip-172-22-20-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.20.210",
            "public_dns": "ec2-52-90-152-39.compute-1.amazonaws.com",
            "public_ip": "52.90.152.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5992cf003120d4e",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "172.22.20.118",
              "172.22.20.145",
              "172.22.20.155",
              "172.22.20.159",
              "172.22.20.191",
              "172.22.20.31",
              "172.22.20.32",
              "172.22.20.35",
              "172.22.20.50",
              "172.22.20.58",
              "172.22.20.78"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018acac454239a095",
            "tags": {
              "eks:cluster-name": "eks_cluster",
              "eks:nodegroup-name": "workernodes",
              "k8s.io/cluster-autoscaler/eks_cluster": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/eks_cluster": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0730b33abb9a37e30"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ops_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:619608907298:instance/i-0c85cdebd7ed7bf6d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c85cdebd7ed7bf6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "My-Key-Pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0252ac338e9583976",
            "private_dns": "ip-172-22-1-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.1.64",
            "public_dns": "ec2-34-201-163-216.compute-1.amazonaws.com",
            "public_ip": "34.201.163.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0092de648499059bd",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-094f9f8b88be672e4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0423653f3bc4611a0",
            "tags": {
              "Name": "OPS server"
            },
            "tags_all": {
              "Name": "OPS server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094f9f8b88be672e4"
            ]
          },
          "dependencies": [
            "aws_key_pair.ops_key_pair",
            "aws_security_group.ops_sg",
            "aws_subnet.ops_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:internet-gateway/igw-01eb67e1db8621c2f",
            "id": "igw-01eb67e1db8621c2f",
            "owner_id": "619608907298",
            "tags": {
              "Name": "IGW For Django Project VPC"
            },
            "tags_all": {
              "Name": "IGW For Django Project VPC"
            },
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "eks-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:619608907298:loadbalancer/net/eks-lb/3b185056873d8ce5",
            "arn_suffix": "net/eks-lb/3b185056873d8ce5",
            "dns_name": "eks-lb-3b185056873d8ce5.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:619608907298:loadbalancer/net/eks-lb/3b185056873d8ce5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "eks-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018acac454239a095"
              },
              {
                "subnet_id": "subnet-0e50aa48b96313b98"
              }
            ],
            "subnets": [
              "subnet-018acac454239a095",
              "subnet-0e50aa48b96313b98"
            ],
            "tags": {
              "kubernetes.io/cluster/eks_cluster": "owned",
              "kubernetes.io/service-name": "default/mario-service"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks_cluster": "owned",
              "kubernetes.io/service-name": "default/mario-service"
            },
            "vpc_id": "vpc-03e2d28a601f49ad7",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_eks_node_group.worker-node-group",
            "aws_iam_role.eks-iam-role",
            "aws_iam_role.workernodes",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_security_group.eks_vpc_sg",
            "aws_subnet.public_subnet_for_eks_1",
            "aws_subnet.public_subnet_for_eks_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listerner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:619608907298:listener/net/eks-lb/3b185056873d8ce5/2417c47d4d649a9d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:619608907298:targetgroup/tg-for-nodes/8cd9f965d6d82b5a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:619608907298:listener/net/eks-lb/3b185056873d8ce5/2417c47d4d649a9d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:619608907298:loadbalancer/net/eks-lb/3b185056873d8ce5",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_eks_node_group.worker-node-group",
            "aws_iam_role.eks-iam-role",
            "aws_iam_role.workernodes",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_lb.eks-lb",
            "aws_lb_target_group.tg_for_nodes",
            "aws_security_group.eks_vpc_sg",
            "aws_subnet.public_subnet_for_eks_1",
            "aws_subnet.public_subnet_for_eks_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_for_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:619608907298:targetgroup/tg-for-nodes/8cd9f965d6d82b5a",
            "arn_suffix": "targetgroup/tg-for-nodes/8cd9f965d6d82b5a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:619608907298:targetgroup/tg-for-nodes/8cd9f965d6d82b5a",
            "lambda_multi_value_headers_enabled": false,
            "name": "tg-for-nodes",
            "port": 30000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_eks_node_group.worker-node-group",
            "aws_iam_role.eks-iam-role",
            "aws_iam_role.workernodes",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_security_group.eks_vpc_sg",
            "aws_subnet.public_subnet_for_eks_1",
            "aws_subnet.public_subnet_for_eks_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nodes_attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:619608907298:targetgroup/tg-for-nodes/8cd9f965d6d82b5a-20221004072334040200000008",
            "port": 30000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:619608907298:targetgroup/tg-for-nodes/8cd9f965d6d82b5a",
            "target_id": "i-028f7417206cac4df"
          },
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_eks_node_group.worker-node-group",
            "aws_iam_role.eks-iam-role",
            "aws_iam_role.workernodes",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_lb_target_group.tg_for_nodes",
            "aws_security_group.eks_vpc_sg",
            "aws_subnet.public_subnet_for_eks_1",
            "aws_subnet.public_subnet_for_eks_2",
            "aws_vpc.my_vpc",
            "data.aws_instance.first_node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nodes_attachement_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:619608907298:targetgroup/tg-for-nodes/8cd9f965d6d82b5a-20221004072334054200000009",
            "port": 30000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:619608907298:targetgroup/tg-for-nodes/8cd9f965d6d82b5a",
            "target_id": "i-07f3d8b69d5725a7e"
          },
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_eks_node_group.worker-node-group",
            "aws_iam_role.eks-iam-role",
            "aws_iam_role.workernodes",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_lb_target_group.tg_for_nodes",
            "aws_security_group.eks_vpc_sg",
            "aws_subnet.public_subnet_for_eks_1",
            "aws_subnet.public_subnet_for_eks_2",
            "aws_vpc.my_vpc",
            "data.aws_instance.second_node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:route-table/rtb-029d73e97c659d5a6",
            "id": "rtb-029d73e97c659d5a6",
            "owner_id": "619608907298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01eb67e1db8621c2f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTB from TF"
            },
            "tags_all": {
              "Name": "RTB from TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ops_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:route-table/rtb-0580010bd78f4e8fb",
            "id": "rtb-0580010bd78f4e8fb",
            "owner_id": "619608907298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01eb67e1db8621c2f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Rtb For Ops Subnet"
            },
            "tags_all": {
              "Name": "Rtb For Ops Subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4e77a5c9c8b051f",
            "route_table_id": "rtb-0580010bd78f4e8fb",
            "subnet_id": "subnet-0423653f3bc4611a0"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.ops_rtb",
            "aws_subnet.ops_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08638200ec517a38d",
            "route_table_id": "rtb-029d73e97c659d5a6",
            "subnet_id": "subnet-0e50aa48b96313b98"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_rtb",
            "aws_subnet.public_subnet_for_eks_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056b63fdcf0140c37",
            "route_table_id": "rtb-029d73e97c659d5a6",
            "subnet_id": "subnet-018acac454239a095"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_rtb",
            "aws_subnet.public_subnet_for_eks_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:security-group/sg-0e4f290e3bd6e34b9",
            "description": "SG for DB",
            "egress": [],
            "id": "sg-0e4f290e3bd6e34b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgre open",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0730b33abb9a37e30"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sg_for_db",
            "name_prefix": "",
            "owner_id": "619608907298",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks-iam-role",
            "aws_security_group.eks_vpc_sg",
            "aws_subnet.public_subnet_for_eks_1",
            "aws_subnet.public_subnet_for_eks_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:security-group/sg-02ee83f8b4944d41f",
            "description": "SG for EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ee83f8b4944d41f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "value",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "sg_for_eks",
            "name_prefix": "",
            "owner_id": "619608907298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for EKS"
            },
            "tags_all": {
              "Name": "SG for EKS"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:security-group/sg-094f9f8b88be672e4",
            "description": "SG for Ops",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094f9f8b88be672e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For Docker",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins open",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH open",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WIREGUARD open",
                "from_port": 51820,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "619608907298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG For Ops"
            },
            "tags_all": {
              "Name": "SG For Ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30000,
            "id": "sgrule-4237953851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0730b33abb9a37e30",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks-iam-role",
            "aws_security_group.eks_vpc_sg",
            "aws_subnet.public_subnet_for_eks_1",
            "aws_subnet.public_subnet_for_eks_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:subnet/subnet-037ee5c12624243ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.22.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037ee5c12624243ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619608907298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet for DB"
            },
            "tags_all": {
              "Name": "Subnet for DB"
            },
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:subnet/subnet-0c9a37acb17a631a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.22.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9a37acb17a631a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619608907298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet for DB"
            },
            "tags_all": {
              "Name": "Subnet for DB"
            },
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:subnet/subnet-0423653f3bc4611a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.22.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0423653f3bc4611a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619608907298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet for Ops Server"
            },
            "tags_all": {
              "Name": "Subnet for Ops Server"
            },
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_for_eks_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:subnet/subnet-0e50aa48b96313b98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.22.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e50aa48b96313b98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619608907298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet for EKS 1"
            },
            "tags_all": {
              "Name": "Public Subnet for EKS 1"
            },
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_for_eks_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:subnet/subnet-018acac454239a095",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.22.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018acac454239a095",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619608907298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet for EKS 2"
            },
            "tags_all": {
              "Name": "Public Subnet for EKS 2"
            },
            "vpc_id": "vpc-03e2d28a601f49ad7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619608907298:vpc/vpc-03e2d28a601f49ad7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.0.0/16",
            "default_network_acl_id": "acl-09baec9c7042892d1",
            "default_route_table_id": "rtb-04c11ae59ee9a3efe",
            "default_security_group_id": "sg-07f277f578fd23a9b",
            "dhcp_options_id": "dopt-0244070197345385e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03e2d28a601f49ad7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c11ae59ee9a3efe",
            "owner_id": "619608907298",
            "tags": {
              "Name": "VPC for Django Project"
            },
            "tags_all": {
              "Name": "VPC for Django Project"
            }
          }
        }
      ]
    }
  ]
}